Fix spacing between layers and topics (#519)
* Fix spacing between layers and topics

* Style adapt

* menu item height in globals

--- a/src/globals.scss
+++ b/src/globals.scss
@@ -3,6 +3,7 @@ $brand-primary: #eb0000;
 $brand-secondary: #003d85;
 $footer-height: 30px;
 $footer-font-size: 12px;
+$menu-item-height: 32px;
 
 // BarrierFree
 $bf-large-outline: 4px solid black !important;
